syntax = "proto3";

import "google/protobuf/empty.proto";

package grpc_test;

service PubSub {
  rpc GetAnEvent(google.protobuf.Empty) returns (Event) {}
  rpc Subscribe(Subscription) returns (stream Event) {}
  rpc Unsubscribe(Subscription) returns (Unsubscription) {}
}

message Event
{
  repeated string value = 1;
}

message Subscription
{
  string id = 1;
}

message Unsubscription
{
  string id = 1;
}
